Splash screen interaction presets not functioning as expected #37746

Closed
opened 2013-12-09 03:08:42 +01:00 by Scott Petrovic · 12 comments

On the splash page, there is an interaction combo box that you can change the presets. If you try to change it, the combo box selection doesn't change to what you selected.

The python uses this: USERPREF_MT_appconfigs

It looks like it is updating the data, because the interaction presets and key configuration are updated when you go into preferences > input.

I am on a Windows 7 machine, but I don't think it is OS specific. It does this on the official 2.69 release as well as the master branch in dev.

interaction-splash-page.jpg

On the splash page, there is an interaction combo box that you can change the presets. If you try to change it, the combo box selection doesn't change to what you selected. The python uses this: USERPREF_MT_appconfigs It looks like it is updating the data, because the interaction presets and key configuration are updated when you go into preferences > input. I am on a Windows 7 machine, but I don't think it is OS specific. It does this on the official 2.69 release as well as the master branch in dev. ![interaction-splash-page.jpg](https://archive.blender.org/developer/F37677/interaction-splash-page.jpg)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @scottyp

Added subscriber: @scottyp
Author

This is pretty minor. I can work on a fix if no other devs want to worry about it (if it is actually a bug)

This is pretty minor. I can work on a fix if no other devs want to worry about it (if it is actually a bug)

Added subscriber: @brecht

Added subscriber: @brecht

This is in the code:

      
    - XXX, no redraws
    - text = bpy.path.display_name(context.window_manager.keyconfigs.active.name)
    - if not text:
    - text = "Blender (default)"

So whoever add this was aware of the problem, the issue is that the UI code can't currently redraw a popup like this, it will use the same button layout until you close it. That would be nice to support but it's fairly complex to do and goes deep into the UI code.

This is in the code: ``` ``` - XXX, no redraws - text = bpy.path.display_name(context.window_manager.keyconfigs.active.name) - if not text: - text = "Blender (default)" So whoever add this was aware of the problem, the issue is that the UI code can't currently redraw a popup like this, it will use the same button layout until you close it. That would be nice to support but it's fairly complex to do and goes deep into the UI code.

Changed status from 'Open' to: 'Archived'

Changed status from 'Open' to: 'Archived'
Brecht Van Lommel self-assigned this 2013-12-09 18:30:52 +01:00

I would not consider this a bug at the moment, if you like to look into it that's fine, but I wouldn't really recommend it at this point unless you want to go down the rabbit hole of refactoring a bunch of UI code.

I would not consider this a bug at the moment, if you like to look into it that's fine, but I wouldn't really recommend it at this point unless you want to go down the rabbit hole of refactoring a bunch of UI code.
Author

sounds good. We can just leave it as is for now.

sounds good. We can just leave it as is for now.

Added subscriber: @ShalokShalom-3

Added subscriber: @ShalokShalom-3

hi there :)

That is the welcome screen..

I think, this issue is disconcerting and confusing for new users, especially for them, who come from programs like 3DS Max and Maya:

The first thing, that they see in Blender, is something which is important for them, seems not to be working.

How can such an issue stay for more than 2 years and everybody seems to be fine with it ?

hi there :) That is the welcome screen.. I think, this issue is disconcerting and confusing for new users, especially for them, who come from programs like 3DS Max and Maya: The first thing, that they see in Blender, is something which is important for them, seems not to be working. How can such an issue stay for more than 2 years and everybody seems to be fine with it ?

This issue was referenced by af980a20a4

This issue was referenced by af980a20a46c9c865418cf60ddaf669e37587bfb

Changed status from 'Archived' to: 'Resolved'

Changed status from 'Archived' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#37746
No description provided.