Fix T37746: Presets in splash failed to redraw